1.9.5
-----


1.9.4
-----
(RB=189079)
Fixed issue with snapshots generation failing when referenced pdscs were circularly dependent.
Added tests to make sure that Snapshot generation and reading would work correctly with
circularly dependent models.

(RB=187506)
Added granular set methods for pagination start and count for getall and finder client builders.

1.9.3
-----
(RB=186736)
fixes snapshot incompatibility message printouts.

(RB=184701)
removes unused property keys and removes the non http-namespaced properties referenced in D2 code

(RB=184310)
Move AvroSchemaGenerator out of data-avro due to logging dependency requirement.

(RB=184337)
Adding support for partial update methods on simple resources.

(RB=184874)
Bug fix with compression client filter Accept-Encoding generation

(RB=185890)
Added string constructors to compression filters.

(RB=185181)
Use ParSeq 1.3.3, which depends on log4j 1.6.2 and converges to the same dependent version as Rest.li uses.
Add missing log4j.xml to restli-example-client.

1.9.2
-----
(RB=183317)
Simplify and speed up string intern tests in TestJacksonCodec. This only affects tests.

(RB=182331)
Adding support for java array return and input parameters for actions.

(RB=183215)
Add separate compatibility check for idl.
Add flag to turn off snapshot and idl compatibility check respectively.

1.9.1
-----
(RB=182338)
Fix bug in pegasus plugin that publish snapshot task may not run.

(RB=181765)
Fix up jdk7 warnings.

(RB=171893)
Added server/client compression filters and associated test cases.

(RB=182463)
Adjust log4j related dependencies and log4j.xml. Remove all compile-time dependency of log4j.

1.9.0
-----
(RB=176567)
Introduce simple resources concept which serves a single entity from a particular path.

(RB=174576)
Clean up SLF4J/Log4j mess by removing all dependencies on Log4j and
the SLF4J/Log4j adapter from production jars.

If your executable (war file, etc.) does not already depend on an SLF4J