@@ -30,6 +30,7 @@ include 'restli-example-client'
 include 'restli-int-test'
 include 'restli-extras'
 include 'restli-server-standalone'
+include 'restli-netty-standalone'
 include 'test-util'
 include 'pegasus-common'
 include 'gradle-plugins'
